# VitaSound

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  README.md  VitaAudio.velf
DrakonSound/: DrakonFileBuffer.c  DrakonSound.c  DrakonWavFile.c
include/DrakonSound/: DrakonFileBuffer.h  DrakonSound.h  DrakonWavFile.h
include/clownresampler/: clownresampler.h
